# MockMaster

./: .gitignore  LICENSE  README.md  pyproject.toml  requirements.txt  setup.py
examples/: sample-api.json  sample-api.yaml
mockmaster/: __init__.py  cli.py  config.py  logger.py  server.py  storage.py  templates.py  utils.py
tests/: test_mockmaster.py
