[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "mockmaster"
version = "1.0.0"
description = "API Mock Server Intelligent Manager - Zero-dependency CLI tool"
readme = "README.md"
license = {text = "MIT"}
authors = [
    {name = "MockMaster Team", email = "mockmaster@example.com"}
]
keywords = ["mock", "api", "server", "testing", "development", "cli", "http", "rest"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Topic :: Software Development :: Testing :: Mocking",
    "Topic :: Internet :: WWW/HTTP :: HTTP Servers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Operating System :: OS Independent",
]
requires-python = ">=3.8"

[project.scripts]
mockmaster = "mockmaster.cli:main"
mm = "mockmaster.cli:main"

[project.urls]
Homepage = "https://github.com/yourusername/mockmaster"
Documentation = "https://github.com/yourusername/mockmaster#readme"
Repository = "https://github.com/yourusername/mockmaster"
"Bug Tracker" = "https://github.com/yourusername/mockmaster/issues"

[tool.setuptools]
packages = ["mockmaster"]

[tool.setuptools.package-data]
mockmaster = ["*.yaml", "*.json"]